<resources>
    <string name="app_name">TheMovieDBApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="error_message_no_favorites">No favorites added</string>
</resources>