<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_popular"
        android:icon="@drawable/ic_view_list"
        android:title="@string/popular"/>

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/favorites"/>


    <item
        android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/menu_mode_light"
                android:icon="@drawable/ic_wb_sunny"
                android:title="@string/light_mode"/>

            <item
                android:id="@+id/menu_mode_dark"
                android:icon="@drawable/ic_moon"
                android:title="@string/dark_mode"/>
        </menu>
    </item>

</menu>